# rtr23-round-cat

./: .gitignore  Cargo.toml  README.md  build.rs
asset_client/: Cargo.toml
asset_client/src/: lib.rs
asset_common/: Cargo.toml
asset_common/src/: asset.rs  gpu.rs  ipc.rs  lib.rs  transform.rs
asset_common/src/asset/: asset_collection.rs  scene.rs  shader.rs
asset_common/src/asset/scene/: gltf_asset.rs  material.rs  mesh.rs  model.rs  texture.rs
asset_common/src/gpu/: vertex.rs
asset_server/: Cargo.toml
asset_server/src/: asset.rs  asset_cache.rs  asset_compilation.rs  asset_database.rs  asset_file.rs  asset_loader.rs  asset_processor.rs  asset_server.rs  asset_sourcer.rs  assets_config.rs  file_change.rs  json_schema.rs  lib.rs  main.rs  read_startup.rs  source_files.rs
asset_server/src/asset/: shader.rs
asset_server/src/asset_loader/: asset_collection_loader.rs  scene_loader.rs  shader_loader.rs
asset_server/src/asset_sourcer/: asset_collection_sourcer.rs  scene_sourcer.rs  shader_sourcer.rs
assets/: asset_collection.json  assets.blend  scene.json
assets/materials/Concrete041B_2K-JPG/: Concrete041B_2K-JPG.mtlx  Concrete041B_2K-JPG.usdc
assets/materials/Tiles107_1K-JPG/: Tiles107_1K-JPG.mtlx  Tiles107_1K-JPG.usdc
assets/scene-local/: .gitignore
assets/shaders/: base.frag  base.vert  base.vert.spv  g_buffer.frag  g_buffer.vert
assets/shaders/shadow/: common.glsl  shadow.rahit  shadow.rchit  shadow.rgen  shadow.rmiss
demo/: Cargo.toml  build.rs
demo/src/: asset_loading.rs  buffer.rs  config_loader.rs  descriptor_set.rs  image.rs  loader.rs  main.rs  render.rs  scene.rs  scene_uploader.rs  transform.rs
demo/src/camera/: camera_controller.rs
demo/src/loader/: asset.rs  material.rs  mesh.rs  scene_loader.rs
demo/src/render/: gbuffer.rs  pass.rs  shader_types.rs
demo/src/render/pass/: geometry.rs  lighting.rs  post_processing.rs
demo/src/scene/: mesh.rs  vertex.rs
game/: Cargo.toml  build.rs
game/src/: buffer.rs  camera.rs  context.rs  cube_mesh.rs  input_map.rs  main.rs  scene_renderer.rs  swapchain.rs  time.rs  utility.rs  vertex.rs
game/src/camera/: freecam_controller.rs
game_libs/: Cargo.toml
game_libs/src/: lib.rs
src/: bow.rs  buffer.rs  camera.rs  config_loader.rs  context.rs  cube_mesh.rs  descriptor_set.rs  image.rs  image_view.rs  input_map.rs  loader.rs  main.rs  render.rs  sampler.rs  scene.rs  scene_renderer.rs  scene_uploader.rs  swapchain.rs  time.rs  utility.rs  vertex.rs  vulkan.rs
src/camera/: animation_camera_controller.rs  freecam_controller.rs
src/loader/: animation.rs  asset.rs  material.rs  mesh.rs  model.rs  scene.rs  scene_loader.rs  texture.rs
src/render/: gbuffer.rs  pass.rs  set_layout_cache.rs  shader_types.rs
src/render/pass/: geometry.rs  lighting.rs  post_processing.rs  shadow.rs
src/scene/: material.rs  mesh.rs  texture.rs  vertex.rs
src/vulkan/: acceleration_structure.rs  buffer.rs  command_buffer.rs  command_pool.rs  context.rs  descriptor_set.rs  image.rs  image_view.rs  sampler.rs  shader_create_info.rs  swapchain.rs  sync_manager.rs  window_settings.rs
src/vulkan/command_buffer/: cmd_args.rs  commands.rs  sync_commands.rs
src/vulkan/sync_manager/: range_map.rs  resource_access.rs
