[package]
name = "round-cat"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.37.3"
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
ultraviolet = "0.9.2"
egui-winit-ash-integration = { git = "https://github.com/stefnotch/egui-winit-ash-integration", branch = "patch-1" }
gpu-allocator = { version = "0.23", default-features = false, features = ["vulkan"] }
egui = "0.23.0"
crevice = { git = "https://github.com/YouSafe/crevice", branch = "main", features = ["ultraviolet"] }

[target.'cfg(windows)'.dependencies]
winit = { version = "0.28", default-features = false }

[target.'cfg(not(windows))'.dependencies]
winit = { version = "0.28" }