[package]
name = "round-cat"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.37.3"
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
ultraviolet = { version = "0.9.2", features = ["serde"] }
gpu-allocator = { version = "0.23", default-features = false, features = ["vulkan"] }
egui = "0.23.0"
crevice = { git = "https://github.com/YouSafe/crevice", branch = "main", features = ["ultraviolet"] }
gltf = { version = "1.3.0", default-features = false, features = ["import", "utils", "names", "KHR_lights_punctual", "KHR_materials_emissive_strength"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = "1.0"
nodit = "0.7.1"

# I gotta duplicate stuff, because the alternative https://github.com/rust-lang/cargo/issues/1197 is not implemented. 
[target.'cfg(windows)'.dependencies]
winit = { version = "0.28", default-features = false }
egui-winit-ash-integration = { git = "https://github.com/YouSafe/egui-winit-ash-integration.git", branch = "main", default-features = false, features = ["gpu-allocator-feature", "clipboard"] }

[target.'cfg(not(windows))'.dependencies]
winit = { version = "0.28" }
egui-winit-ash-integration = { git = "https://github.com/YouSafe/egui-winit-ash-integration.git", branch = "main", default-features = false, features = ["gpu-allocator-feature", "default"] }

[profile.dev]
opt-level = 2
