[package]
name = "asset_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interprocess = { version = "1.2.1", default-features = false }
ultraviolet = { version = "0.9.2" }
rkyv = { version = "0.7", features = ["validation"] }