[package]
name = "asset_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
interprocess = { version = "1.2.1", default-features = false }
bincode = "1.3"
ultraviolet = { version = "0.9.2", features = ["serde"] }