[package]
name = "asset_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
atomicwrites = "0.4"
env_logger = "0.10"
ipc-channel = "0.18"
walkdir = "2"
notify-debouncer-full = { version = "0.3.1", default-features = false }
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.5", features = ["v4"] }
relative-path = { version = "1.9", features = ["serde"] }
anyhow = { version = "1.0" }